--- a/utils/collectd/Makefile
+++ b/utils/collectd/Makefile
@@ -474,3 +474,5 @@ $(eval $(call BuildPlugin,write-graphite,Carbon/Graphite output,write_graphite,+
 $(eval $(call BuildPlugin,write-http,HTTP POST output,write_http,+PACKAGE_collectd-mod-write-http:libcurl))
 
 $(eval $(call BuildScriptPlugin,sqm,SQM/qdisc collection,sqm_collectd,+PACKAGE_collectd-mod-sqm:collectd-mod-exec))
+$(eval $(call BuildScriptPlugin,ltq-dsl,Lantiq DSL collection,ltq_dsl_collectd,+PACKAGE_collectd-mod-ltq-dsl:collectd-mod-lua))
+$(eval $(call BuildScriptPlugin,int6krate,Int6k PLC bitrate collection,int6krate_collectd,+PACKAGE_collectd-mod-int6krate:collectd-mod-exec:open-plc-utils-int6krate))
